--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
   </svg>
 </a>lucky_svg_sprite_cli.cr</h1>
 
+<p>This is the cli backend for the <a href="https://github.com/tilitribe/lucky_svg_sprite.cr">lucky_svg_sprite.cr</a> shard. That's the one you'll need to add to your Lucky project.</p>
+
 <p><img src="https://img.shields.io/github/license/tilitribe/lucky_svg_sprite_cli.cr" alt="GitHub"/>
 <img src="https://img.shields.io/github/v/tag/tilitribe/lucky_svg_sprite_cli.cr" alt="GitHub tag (latest SemVer)"/>
 <img src="https://img.shields.io/github/workflow/status/tilitribe/lucky_svg_sprite_cli.cr/lucky_svg_sprite_cli%20CI" alt="GitHub Workflow Status"/></p>
@@ -149,13 +151,21 @@
 
 <pre><code class="language-crystal"><span class="k">require</span> <span class="s">&quot;lucky_svg_sprite_cli&quot;</span></code></pre>
 
+<h2><a id="documentation" class="anchor" href="#documentation">
+  <svg class="octicon-link" aria-hidden="true">
+    <use href="#octicon-link"/>
+  </svg>
+</a>Documentation</h2>
+
+<ul><li><a href="https://tilitribe.github.io/lucky_svg_sprite_cli.cr">API (master)</a></li></ul>
+
 <h2><a id="contributing" class="anchor" href="#contributing">
   <svg class="octicon-link" aria-hidden="true">
     <use href="#octicon-link"/>
   </svg>
 </a>Contributing</h2>
 
-<ol><li>Fork it (&lt;https://github.com/your-github-user/lucky_svg_sprite_cli/fork>)</li><li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li><li>Commit your changes (<code>git commit -am 'Add some feature'</code>)</li><li>Push to the branch (<code>git push origin my-new-feature</code>)</li><li>Create a new Pull Request</li></ol>
+<ol><li>Fork it (&lt;https://github.com/tilitribe/lucky_svg_sprite_cli/fork>)</li><li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li><li>Commit your changes (<code>git commit -am 'Add some feature'</code>)</li><li>Push to the branch (<code>git push origin my-new-feature</code>)</li><li>Create a new Pull Request</li></ol>
 
 <h2><a id="contributors" class="anchor" href="#contributors">
   <svg class="octicon-link" aria-hidden="true">
