deploy: 0a6637566e0ae473ff4892a733433bef09dabfa8

--- a/index.html
+++ b/index.html
@@ -133,13 +133,9 @@
 
 <ol><li>Add the dependency to your <code>shard.yml</code>:</li></ol>
 
-<p><code></code>`yaml
-   dependencies:</p>
-
-<pre><code class="language-crystal"> lucky_svg_sprite_cli:
-   github: tilitribe/lucky_svg_sprite_cli.cr</code></pre>
-
-<p><code></code>`</p>
+<pre><code class="language-yaml">dependencies:
+  lucky_svg_sprite_cli:
+    github: tilitribe/lucky_svg_sprite_cli.cr</code></pre>
 
 <ol><li>Run <code>shards install</code></li></ol>
 
