--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
   </svg>
 </a>lucky_svg_sprite_cli.cr</h1>
 
-<p>This is the cli backend for the <a href="https://github.com/tilitribe/lucky_svg_sprite.cr">lucky_svg_sprite.cr</a> shard. That's the one you'll need to add to your Lucky project.</p>
+<p>This is the cli backend for the <a href="https://github.com/wout/lucky_svg_sprite.cr">lucky_svg_sprite.cr</a> shard. That's the one you'll need to add to your Lucky project.</p>
 
-<p><img src="https://img.shields.io/github/license/tilitribe/lucky_svg_sprite_cli.cr" alt="GitHub"/>
-<img src="https://img.shields.io/github/v/tag/tilitribe/lucky_svg_sprite_cli.cr" alt="GitHub tag (latest SemVer)"/>
-<img src="https://img.shields.io/github/workflow/status/tilitribe/lucky_svg_sprite_cli.cr/lucky_svg_sprite_cli%20CI" alt="GitHub Workflow Status"/></p>
+<p><img src="https://img.shields.io/github/license/wout/lucky_svg_sprite_cli.cr" alt="GitHub"/>
+<img src="https://img.shields.io/github/v/tag/wout/lucky_svg_sprite_cli.cr" alt="GitHub tag (latest SemVer)"/>
+<img src="https://img.shields.io/github/workflow/status/wout/lucky_svg_sprite_cli.cr/lucky_svg_sprite_cli%20CI" alt="GitHub Workflow Status"/></p>
 
 <h2><a id="installation" class="anchor" href="#installation">
   <svg class="octicon-link" aria-hidden="true">
@@ -135,7 +135,7 @@
 
 <pre><code class="language-yaml">dependencies:
   lucky_svg_sprite_cli:
-    github: tilitribe/lucky_svg_sprite_cli.cr</code></pre>
+    github: wout/lucky_svg_sprite_cli.cr</code></pre>
 
 <ol><li>Run <code>shards install</code></li></ol>
 
@@ -153,7 +153,7 @@
   </svg>
 </a>Documentation</h2>
 
-<ul><li><a href="https://tilitribe.github.io/lucky_svg_sprite_cli.cr">API (master)</a></li></ul>
+<ul><li><a href="https://wout.github.io/lucky_svg_sprite_cli.cr">API (master)</a></li></ul>
 
 <h2><a id="contributing" class="anchor" href="#contributing">
   <svg class="octicon-link" aria-hidden="true">
@@ -161,7 +161,7 @@
   </svg>
 </a>Contributing</h2>
 
-<ol><li>Fork it (&lt;https://github.com/tilitribe/lucky_svg_sprite_cli/fork>)</li><li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li><li>Commit your changes (<code>git commit -am 'Add some feature'</code>)</li><li>Push to the branch (<code>git push origin my-new-feature</code>)</li><li>Create a new Pull Request</li></ol>
+<ol><li>Fork it (&lt;https://github.com/wout/lucky_svg_sprite_cli/fork>)</li><li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li><li>Commit your changes (<code>git commit -am 'Add some feature'</code>)</li><li>Push to the branch (<code>git push origin my-new-feature</code>)</li><li>Create a new Pull Request</li></ol>
 
 <h2><a id="contributors" class="anchor" href="#contributors">
   <svg class="octicon-link" aria-hidden="true">
