--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
 
 
 <div class="main-content">
-<h1><a id="lucky-svg-sprite-cli.cr" class="anchor" href="#lucky-svg-sprite-cli.cr">
+<h1><a id="lucky-svg-sprite-cli" class="anchor" href="#lucky-svg-sprite-cli">
   <svg class="octicon-link" aria-hidden="true">
     <use href="#octicon-link"/>
   </svg>
-</a>lucky_svg_sprite_cli.cr</h1>
+</a>Lucky SVG Sprite CLI</h1>
 
-<p>This is the cli backend for the <a href="https://github.com/wout/lucky_svg_sprite.cr">lucky_svg_sprite.cr</a> shard. That's the one you'll need to add to your Lucky project.</p>
+<p>This is the cli backend for the <a href="https://github.com/wout/lucky_svg_sprite">lucky_svg_sprite</a> shard. That's the one you'll need to add to your Lucky project.</p>
 
-<p><img src="https://img.shields.io/github/license/wout/lucky_svg_sprite_cli.cr" alt="GitHub"/>
-<img src="https://img.shields.io/github/v/tag/wout/lucky_svg_sprite_cli.cr" alt="GitHub tag (latest SemVer)"/>
-<img src="https://img.shields.io/github/workflow/status/wout/lucky_svg_sprite_cli.cr/lucky_svg_sprite_cli%20CI" alt="GitHub Workflow Status"/></p>
+<p><img src="https://img.shields.io/github/license/wout/lucky_svg_sprite_cli" alt="GitHub"/>
+<img src="https://img.shields.io/github/v/tag/wout/lucky_svg_sprite_cli" alt="GitHub tag (latest SemVer)"/>
+<img src="https://img.shields.io/github/workflow/status/wout/lucky_svg_sprite_cli/lucky_svg_sprite_cli%20CI" alt="GitHub Workflow Status"/></p>
 
 <h2><a id="installation" class="anchor" href="#installation">
   <svg class="octicon-link" aria-hidden="true">
@@ -135,7 +135,7 @@
 
 <pre><code class="language-yaml">dependencies:
   lucky_svg_sprite_cli:
-    github: wout/lucky_svg_sprite_cli.cr</code></pre>
+    github: wout/lucky_svg_sprite_cli</code></pre>
 
 <ol><li>Run <code>shards install</code></li></ol>
 
@@ -153,7 +153,7 @@
   </svg>
 </a>Documentation</h2>
 
-<ul><li><a href="https://wout.github.io/lucky_svg_sprite_cli.cr">API (master)</a></li></ul>
+<ul><li><a href="https://wout.github.io/lucky_svg_sprite_cli">API (master)</a></li></ul>
 
 <h2><a id="contributing" class="anchor" href="#contributing">
   <svg class="octicon-link" aria-hidden="true">
